# NorthStar

./: .gitignore  Cargo.toml  README.md  setup.py  test_northstar.py
assets/: ValorantStats.csv  test.csv
demo/: demo.py
northstar/: __init__.py
src/: dataframe.rs  io.rs  lib.rs  series.rs  test.rs
